--- a/app/src/main/res/layout/activity_ganador.xml
+++ b/app/src/main/res/layout/activity_ganador.xml
@@ -32,6 +32,7 @@
         android:id="@+id/btn_salir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="salir"
         android:text="Salir" />
 
 </LinearLayout>
