--- a/app/src/main/res/layout/activity_preguntas.xml
+++ b/app/src/main/res/layout/activity_preguntas.xml
@@ -10,7 +10,7 @@
     tools:context=".PreguntasActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/trivia_imagen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:srcCompat="@tools:sample/avatars" />
