--- a/app/src/main/res/layout/activity_ganador.xml
+++ b/app/src/main/res/layout/activity_ganador.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
+    android:padding="30dp"
     tools:context=".ganador">
 
     <TextView
@@ -20,17 +21,18 @@
         android:id="@+id/imageView3"
         android:layout_width="146dp"
         android:layout_height="109dp"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/ic_feliz" />
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="337dp"
-        android:layout_height="399dp"
+        android:layout_width="317dp"
+        android:layout_height="351dp"
         app:srcCompat="@drawable/ic_qr_code" />
 
     <Button
         android:id="@+id/btn_salir"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="salir"
         android:text="Salir" />
