--- a/app/src/main/res/layout/activity_perdedor.xml
+++ b/app/src/main/res/layout/activity_perdedor.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
+    android:padding="30dp"
     tools:context=".perdedor">
 
     <ImageView
@@ -35,13 +36,14 @@
         android:id="@+id/txt_respondidas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:gravity="left"
         android:text="TextView"
         android:textSize="24sp" />
 
     <Button
         android:id="@+id/btn_jugar_nuevo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:onClick="jugar"
@@ -49,7 +51,7 @@
 
     <Button
         android:id="@+id/btn_salir"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="salir"
         android:text="Salir" />
